# LexiClue

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  metadata.json  render.yaml
.github/: copilot-instructions.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/routes/: words.rs
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.tsx
